添加分页和查询功能，修复网页访问问题