@@ -14,10 +14,12 @@ import org.apache.commons.fileupload2.jakarta.servlet5.JakartaServletFileUpload;
 
 import repo.DatabaseService;
 import repo.MovieResultSetVisitor;
+import utils.HtmlHelper;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -40,40 +42,32 @@ public class UpdateMovieServlet extends HttpServlet {
 
         ServletContext context = this.getServletContext();
         DatabaseService dbService = (DatabaseService)context.getAttribute(DatabaseService.CONTEXT_KEY);
-        String selectSQL = "select * from movies where movie_id = " + id;
+        String selectSQL = String.format("select * from movies where movie_id = %s", id);
 
         try {
             List<Movie> movies = dbService.query(selectSQL, new MovieResultSetVisitor());
             Movie m = movies.get(0);
             String template = """
     <form action="./updateMovie" method="post" enctype="multipart/form-data" style="line-height:3em">
-        <input type="hidden" name="movie_id" value="%s"><br>
-        电影标题：<input type="text" name="movie_title" value="%s"><br>
-        发布年份：<input type="text" name="release_year" value="%s"><br>
+        <input type="hidden" name="movieId" value="%s"><br>
+        电影标题：<input type="text" name="movieTitle" value="%s"><br>
+        发行年份：<input type="text" name="releaseYear" value="%s"><br>
         地区：<input type="text" name="region" value="%s"><br>
         语言：<input type="text" name="language" value="%s"><br>
         类型：<input type="text" name="genre" value="%s"><br>
-        剧情简介：<textarea rows="3" cols="22" name="plot_summary">%s</textarea><br>
-        平均评分：<input type="text" name="average_rating" value="%s"><br>
-        海报图片：<input type="file" name="poster_file"><br>
+        剧情简介：<textarea rows="3" cols="22" name="plotSummary">%s</textarea><br>
+        平均评分：<input type="text" name="averageRating" value="%s"><br>
+        海报图片：<input type="file" name="picture"><br>
         (当前海报: %s)<br><br>
         <input type="submit" value="修改电影">
     </form>
         """;
             response.setContentType("text/html");
             response.setCharacterEncoding("UTF-8");
-            try(java.io.Writer writer = response.getWriter()) {
+            try(Writer writer = response.getWriter()) {
                 String form = String.format(template,
-                        m.getMovieId(),
-                        m.getMovieTitle() != null ? m.getMovieTitle() : "",
-                        m.getReleaseYear() != null ? m.getReleaseYear().toString() : "",
-                        m.getRegion() != null ? m.getRegion() : "",
-                        m.getLanguage() != null ? m.getLanguage() : "",
-                        m.getGenre() != null ? m.getGenre() : "",
-                        m.getPlotSummary() != null ? m.getPlotSummary() : "",
-                        m.getAverageRating() != null ? m.getAverageRating().toString() : "",
-                        m.getPicture() != null ? m.getPicture() : "无");
-                String html = "<html><head><title>修改电影</title></head><body><h1>修改电影信息</h1>" + form + "</body></html>";
+                        m.getMovieId(), m.getMovieTitle(), m.getReleaseYear(), m.getRegion(), m.getLanguage(), m.getGenre(), m.getPlotSummary(), m.getAverageRating(), m.getPicture() != null ? m.getPicture() : "无");
+                String html = HtmlHelper.wrapHtml(form);
                 writer.write(html);
                 writer.flush();
             }
@@ -118,18 +112,18 @@ public class UpdateMovieServlet extends HttpServlet {
 
             // 解析请求的内容提取文件数据
             String movieId = null, movieTitle = null, releaseYear = null, region = null,
-                   language = null, genre = null, plotSummary = null, averageRating = null;
-            String posterFileName = null;
+                   language = null, genre = null, plotSummary = null, picture = null;
+            double averageRating = 0.0;
 
             List<DiskFileItem> items = upload.parseRequest(request);
             for (FileItem item : items) {
                 if (item.isFormField()) {
                     String fieldName = item.getFieldName();
-                    if (fieldName.equals("movie_id")) {
+                    if (fieldName.equals("movieId")) {
                         movieId = item.getString();
-                    } else if(fieldName.equals("movie_title")) {
+                    } else if(fieldName.equals("movieTitle")) {
                         movieTitle = item.getString();
-                    } else if(fieldName.equals("release_year")) {
+                    } else if(fieldName.equals("releaseYear")) {
                         releaseYear = item.getString();
                     } else if(fieldName.equals("region")) {
                         region = item.getString();
@@ -137,37 +131,25 @@ public class UpdateMovieServlet extends HttpServlet {
                         language = item.getString();
                     } else if(fieldName.equals("genre")) {
                         genre = item.getString();
-                    } else if(fieldName.equals("plot_summary")) {
+                    } else if(fieldName.equals("plotSummary")) {
                         plotSummary = item.getString();
-                    } else if(fieldName.equals("average_rating")) {
-                        averageRating = item.getString();
+                    } else if(fieldName.equals("averageRating")) {
+                        averageRating = Double.parseDouble(item.getString());
                     }
-                } else if (item.getFieldName().equals("poster_file")) {
-                    // 上传海报文件
-                    String fileName = item.getName();
-                    if(fileName != null && !fileName.isEmpty()) {
-                        // 获取文件名，处理可能包含路径的情况
-                        fileName = new File(fileName).getName();
-                        // 确保只接受图片文件
-                        String contentType = item.getContentType();
-                        if(contentType != null && (contentType.toLowerCase().startsWith("image/"))) {
-                            // 生成唯一文件名以避免冲突
-                            String uniqueFileName = System.currentTimeMillis() + "_" + fileName;
-                            Path filePath = Paths.get(uploadPath, uniqueFileName);
-                            System.out.println("Saving file to: " + filePath);
-                            item.write(filePath); // 保存文件到硬盘
-                            posterFileName = uniqueFileName;
-                        } else {
-                            System.out.println("File is not an image: " + contentType);
-                        }
+                } else {
+                    String fieldName = item.getFieldName();
+                    if("picture".equals(fieldName) && item.getName() != null && !item.getName().isEmpty()) {
+                        String fileName = new File(item.getName()).getName();
+                        Path filePath = Path.of(uploadPath, fileName);
+                        System.out.println(filePath);
+                        item.write(filePath); // 保存文件到硬盘
+                        picture = fileName;
                     }
                 }
             }
 
-            if(movieId != null) {
-                this.updateMovieToDb(request, movieId, movieTitle, releaseYear, region, language,
-                                    genre, plotSummary, averageRating, posterFileName);
-            }
+            this.updateMovieToDb(request, movieId, movieTitle, releaseYear, region, language,
+                    genre, plotSummary, averageRating, picture);
         } catch (Exception ex) {
             throw new ServletException(ex);
         }
@@ -177,54 +159,46 @@ public class UpdateMovieServlet extends HttpServlet {
 
     private void updateMovieToDb(HttpServletRequest request, String movieId, String movieTitle, String releaseYear,
                                 String region, String language, String genre, String plotSummary,
-                                String averageRating, String posterFileName) throws SQLException {
-        ServletContext context = request.getServletContext();
+                                Double averageRating, String picture) throws SQLException {
+        ServletContext context = this.getServletContext();
         DatabaseService service = (DatabaseService)context.getAttribute(DatabaseService.CONTEXT_KEY);
+
+        //限制plotSummary长度
+        if (plotSummary != null && plotSummary.length() > 100) {
+            plotSummary = plotSummary.substring(0, 100);
+        }
 
         // 转义单引号，防止 SQL 注入和语法错误
         movieTitle = escapeSqlString(movieTitle);
+        releaseYear = escapeSqlString(releaseYear);
         region = escapeSqlString(region);
         language = escapeSqlString(language);
         genre = escapeSqlString(genre);
         plotSummary = escapeSqlString(plotSummary);
+        picture = escapeSqlString(picture);
 
-        // 构建更新SQL语句，根据是否有新海报文件决定是否更新picture字段
-        String updateSql;
-        if (posterFileName != null && !posterFileName.isEmpty()) {
-            // 包含海报文件的更新
-            String pictureValue = "upload/" + escapeSqlString(posterFileName);
-            String releaseYearValue = (releaseYear != null && !releaseYear.isEmpty()) ? releaseYear : "NULL";
-            String averageRatingValue = (averageRating != null && !averageRating.isEmpty()) ? averageRating : "NULL";
-
-            updateSql = String.format(
-                "UPDATE movies SET movie_title='%s', release_year=%s, region='%s', language='%s', " +
-                "genre='%s', plot_summary='%s', average_rating=%s, picture='%s', updated_at=NOW() WHERE movie_id=%s",
-                movieTitle, releaseYearValue, region, language, genre, plotSummary,
-                averageRatingValue, pictureValue, movieId
-            );
+        String updateSQL;
+        if(picture != null && !picture.isEmpty()) {
+            // 验证 id 是有效的数字
+            int Id;
+            try {
+               Id = Integer.parseInt(movieId);
+            } catch (NumberFormatException e) {
+                throw new SQLException("无效的电影ID: " + movieId);
+            }
+            updateSQL = "UPDATE movies SET movieTitle='%s', releaseYear='%s', region='%s', language='%s', genre='%s', plotSummary='%s', averageRating=%s, picture='%s' WHERE movieId=%s";
+            service.execute(String.format(updateSQL, movieTitle, releaseYear, region, language, genre, plotSummary, averageRating, picture, movieId));
         } else {
-            // 不包含海报文件的更新
-            String releaseYearValue = (releaseYear != null && !releaseYear.isEmpty()) ? releaseYear : "NULL";
-            String averageRatingValue = (averageRating != null && !averageRating.isEmpty()) ? averageRating : "NULL";
-
-            updateSql = String.format(
-                "UPDATE movies SET movie_title='%s', release_year=%s, region='%s', language='%s', " +
-                "genre='%s', plot_summary='%s', average_rating=%s, updated_at=NOW() WHERE movie_id=%s",
-                movieTitle, releaseYearValue, region, language, genre, plotSummary,
-                averageRatingValue, movieId
-            );
+            // 验证 id 是有效的数字
+            int Id;
+            try {
+                Id = Integer.parseInt(movieId);
+            } catch (NumberFormatException e) {
+                throw new SQLException("无效的电影ID: " + movieId);
+            }
+            updateSQL = "UPDATE movies SET movieTitle='%s', releaseYear='%s', region='%s', language='%s', genre='%s', plotSummary='%s', averageRating=%s WHERE movieId=%s";
+            service.execute(String.format(updateSQL, movieTitle, releaseYear, region, language, genre, plotSummary, averageRating, movieId));
         }
-
-        // 将字符串"NULL"替换为真正的NULL值，但要小心不要影响其他可能含有"NULL"文本的部分
-        updateSql = updateSql.replace(", 'NULL',", ", NULL,")
-                             .replace(", 'NULL' ", ", NULL ")
-                             .replace(", 'NULL'", ", NULL")
-                             .replace(" 'NULL' WHERE", " NULL WHERE")
-                             .replace("'NULL' WHERE", "NULL WHERE");
-
-        System.out.println("Update SQL: " + updateSql); // Debugging line
-
-        service.update(updateSql);
     }
 
     // 转义 SQL 字符串中的单引号
